k8s-nginx-demo/k8s-nginx-demo-danny--depl_v1.yaml
# k8s-nginx-demo-danny--depl_v1.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-nginx-danny
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-nginx-danny
  template:
    metadata:
      labels:
        app: k8s-nginx-danny
    spec:
      containers:
      - name: k8s-websrv-danny
        image: dfdemo/hello-nginx:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        #env:
        #- name: MESSAGE
        #  value: Danny just deployed this Version1 on K8s!!
