k8s-nginx-demo/k8s-nginx-demo--ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /k8s-nginx-d
          backend:
            serviceName: k8s-nginx-danny
            servicePort: 8080
